added edit menuItem and removed due

--- a/MenuesBuild/MainWindow.xaml
+++ b/MenuesBuild/MainWindow.xaml
@@ -12,12 +12,14 @@
                 <Separator/>
                 <MenuItem Header ="_Exit" MouseEnter ="MouseEnterExitArea" MouseLeave ="MouseLeaveArea" Click ="FileExit_Click"/>
             </MenuItem>
+            <MenuItem Header="_Edit">
+                <MenuItem Command="ApplicationCommands.Copy" />
+                <MenuItem Command="ApplicationCommands.Cut" />
+                <MenuItem Command="ApplicationCommands.Paste" />
+            </MenuItem>
             <MenuItem Header="_Tools">
                 <MenuItem Header ="_Spelling Hints" MouseEnter ="MouseEnterToolsHintsArea"
                           MouseLeave ="MouseLeaveArea" Click ="ToolsSpellingHints_Click"/>
-            </MenuItem>
-            <MenuItem x:Name="Due" Header="Due">
-                <MenuItem Header="MenuItem"/>
             </MenuItem>
         </Menu>
         <ToolBar DockPanel.Dock ="Top" >
