--- a/MenuesBuild/MainWindow.xaml
+++ b/MenuesBuild/MainWindow.xaml
@@ -6,11 +6,22 @@
         xmlns:local="clr-namespace:MenuesBuild"
         mc:Ignorable="d"
         Title="My Spell Checker" Height="450" Width="800">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Open"
+                        Executed="CommandBinding_Executed"
+                        CanExecute="CommandBinding_CanExecute"/>
+        <CommandBinding Command="ApplicationCommands.Save"
+                Executed="CommandBinding_Executed_1"
+                CanExecute="CommandBinding_CanExecute_1"/>
+    </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock ="Top" HorizontalAlignment="Left" Background="White" BorderBrush ="Black">
             <MenuItem Header="_File">
+                <MenuItem Command="ApplicationCommands.Open"/>
+                <MenuItem Command="ApplicationCommands.Save"/>
                 <Separator/>
                 <MenuItem Header ="_Exit" MouseEnter ="MouseEnterExitArea" MouseLeave ="MouseLeaveArea" Click ="FileExit_Click"/>
+                
             </MenuItem>
             <MenuItem Header="_Edit">
                 <MenuItem Command="ApplicationCommands.Copy" />
@@ -21,6 +32,7 @@
                 <MenuItem Header ="_Spelling Hints" MouseEnter ="MouseEnterToolsHintsArea"
                           MouseLeave ="MouseLeaveArea" Click ="ToolsSpellingHints_Click"/>
             </MenuItem>
+            
         </Menu>
         <ToolBar DockPanel.Dock ="Top" >
             <Button Content ="Exit" MouseEnter ="MouseEnterExitArea" MouseLeave ="MouseLeaveArea" Click ="FileExit_Click"/>
